# fast_sklearn_testing

./: .gitignore  LICENSE.md  README.md  generate_config_file.py  pyproject.toml
.github/workflows/: CI.yaml
examples/: optimization_dict_hyperopt.py
examples/binary-classification/: run_pipeline.py  training_config.yml
examples/multi-classification/: run_pipeline.py  training_config.yml
examples/regression/: run_pipeline.py  training_config.yml
src/config/: models_metrics_plots_per_task.py  training_config.yml
src/custom_metrics_and_plots/: custom_metrics.py  custom_plots.py  utils.py
src/training/: prepare_dataset.py  training_pipeline.py  training_steps.py
src/utils/: constants.py  types.py  utils.py
